<resources>
    <string name="app_name">StocknRoll</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="cooking_time">Cooking Time: %s Minutes</string>
    <string name="name">Name</string>
    <string name="category">Category</string>
    <string name="quantity">Quantity</string>
    <string name="expiry_date">Expiry date</string>
    <string name="image_url">Image URL</string>
    <string name="add">Add</string>
    <string name="increase_quantity">Increase quantity</string>
    <string name="decrease_quantity">Decrease quantity</string>
    <string name="view_all">View All</string>
    <string name="produce">Produce</string>
    <string name="dairy_amp_eggs"><![CDATA[Dairy & Eggs]]></string>
    <string name="meat_amp_seafood"><![CDATA[Meat & Seafood]]></string>
    <string name="bakery_amp_grains"><![CDATA[Bakery & Grains]]></string>
    <string name="snacks_amp_sweets"><![CDATA[Snacks & Sweets]]></string>
    <string name="beverages">Beverages</string>
    <string name="other">Other</string>
    <string name="sort_by">Sort by:</string>
    <string name="pantry">Pantry</string>
    <string name="recipes">Recipes</string>
    <string name="favourites">Favourites</string>
    <string name="shopping_list">Shopping List</string>
    <string name="recipe_list">Recipe List</string>
    <string name="filter_recipe">Filter Recipe</string>
    <string name="stock_n_roll">Stock\'n\'Roll</string>
    <string name="_0_recipes_found">0 Recipes Found</string>
    <string name="logo">logo</string>
    <string name="delete_ingredient">Delete Ingredient %s</string>
    <string name="ingredient_image">Ingredient Image</string>
</resources>