<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.main.MainActivity">

    <data>

        <variable
            name="clickHandler"
            type="com.candlelightapps.stocknroll_frontend.ui.mainactivity.MainActivityClickHandler" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/doodle">

        <LinearLayout
            android:id="@+id/toolbarLayout"
            style="@style/CustomToolBar"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:contentDescription="@string/logo"
                android:src="@drawable/stocknroll_logo" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                style="@style/CustomToolBar"
                android:layout_width="0dp"
                android:layout_height="?attr/actionBarSize"
                android:layout_weight="1"
                app:menu="@menu/search_menu"
                app:title="Stock'n'Roll" />

        </LinearLayout>


        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout"
            style="@style/CustomTabLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbarLayout"
            app:tabMode="scrollable">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/view_all" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/produce" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/dairy_amp_eggs" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/meat_amp_seafood" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/bakery_amp_grains" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/snacks_amp_sweets" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/beverages" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab7"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/other" />

        </com.google.android.material.tabs.TabLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dropdown_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sort_by"
            android:paddingStart="230dp"
            android:paddingTop="2dp"
            android:paddingEnd="16dp"
            android:paddingBottom="6dp"
            android:textSize="12sp"
            app:boxBackgroundColor="@android:color/white"
            app:boxStrokeColor="@color/text_input_layout_stroke_color_selector"
            app:hintTextColor="@color/orange"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tab_layout">

            <AutoCompleteTextView
                android:id="@+id/dropdown_sorting_inventory"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="none"
                android:text="" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/inventory_recycler_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dropdown_layout"
            app:layout_constraintVertical_bias="0.0"
            tools:listitem="@layout/item_ingredient_view" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_add"
            style="@style/CustomFloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="16dp"
            android:onClick="@{clickHandler::onFABClicked}"
            android:src="@drawable/ic_add"
            android:tint="@color/white"
            app:layout_constraintBottom_toTopOf="@id/navigationLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/navigationLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/navigation_image" />

            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/bottom_navigation"
                style="@style/CustomBottomNavigationView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:labelVisibilityMode="labeled"
                app:layout_constraintBottom_toBottomOf="parent"
                app:menu="@menu/bottom_nav_menu" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
