<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.candlelightapps.stocknroll_frontend.util.Converter" />

        <variable
            name="ingredient"
            type="com.candlelightapps.stocknroll_frontend.model.Ingredient" />

        <variable
            name="clickHandler"
            type="com.candlelightapps.stocknroll_frontend.ui.addingredient.AddIngredientClickHandler" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.addingredient.AddIngredientActivity"
        android:background="@drawable/doodle">

        <LinearLayout
            android:id="@+id/toolbarLayout"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/CustomToolBar"
            >
            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/stocknroll_logo"
                android:contentDescription="@string/logo"
                />

            <androidx.appcompat.widget.Toolbar
                android:layout_width="0dp"
                android:layout_height="?attr/actionBarSize"
                android:id="@+id/toolbar"
                android:layout_weight="1"
                app:title="Add A New Ingredient"
                style="@style/CustomToolBar"
                />

        </LinearLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_layout"
            style="@style/CustomTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:paddingHorizontal="32dp"
            android:paddingVertical="16dp"
            app:layout_constraintTop_toBottomOf="@id/toolbarLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ingredientName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={ingredient.name}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/category_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/category"
            android:paddingHorizontal="32dp"
            android:paddingVertical="16dp"
            app:layout_constraintTop_toBottomOf="@id/name_layout"
            app:hintTextColor="@color/orange"
            app:boxStrokeColor="@color/text_input_layout_stroke_color_selector"
            >

            <AutoCompleteTextView
                android:id="@+id/category_dropdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:text="@={ingredient.category}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/quantity_layout"
            style="@style/CustomTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/quantity"
            app:hintTextColor="@color/orange"
            android:paddingHorizontal="32dp"
            android:paddingVertical="16dp"
            app:layout_constraintTop_toBottomOf="@id/category_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ingredientQuantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:text="@={Converter.intToString(ingredient.quantity)}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/expiry_date_layout"
            style="@style/CustomTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/expiry_date"
            android:paddingHorizontal="32dp"
            android:paddingVertical="16dp"
            app:layout_constraintTop_toBottomOf="@id/quantity_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ingredientExpiryDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:focusable="false"
                android:text="@={ingredient.expiryDate}" />

            <Button
                android:id="@+id/expiryDateButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                android:text="Select Date"
                android:layout_marginTop="5sp"
                style="@style/CustomButton"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/image_url_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/image_url"
            android:paddingHorizontal="32dp"
            android:paddingVertical="16dp"
            app:layout_constraintTop_toBottomOf="@id/expiry_date_layout">

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/addIngredientButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:onClick="@{clickHandler::onSubmitButtonClicked}"
            android:text="@string/add"
            app:layout_constraintBottom_toTopOf="@id/navigationLayout"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/CustomButton"
            />
        
        <LinearLayout
            android:id="@+id/navigationLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="vertical"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/navigation_image"
                android:scaleType="fitXY"
                android:adjustViewBounds="true"
                />

            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/bottom_navigation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:labelVisibilityMode="labeled"
                app:layout_constraintBottom_toBottomOf="parent"
                app:menu="@menu/bottom_nav_menu"
                style="@style/CustomBottomNavigationView"
                />
        </LinearLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>