<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.findrecipebyingredient.FoundRecipeByIngredient">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/recipe_list"
            app:titleTextColor="@color/white" />

        <TextView
            android:id="@+id/recipesFoundCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0_recipes_found"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="20sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />

        <ImageButton
            android:id="@+id/filterButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_shape_round"
            android:contentDescription="@string/filter_recipe"
            android:src="@drawable/btn_filter_drawable_selector"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="20sp"
            android:layout_marginBottom="20sp"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recipeRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0sp"
            app:layout_constraintTop_toBottomOf="@+id/recipesFoundCount"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
            android:layout_margin="10sp"
            tools:listitem="@layout/activity_found_recipe_view"
            />

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/material_dynamic_primary95"
            app:itemIconTint="@color/black"
            app:itemTextColor="@color/black"
            app:labelVisibilityMode="labeled"
            app:layout_constraintBottom_toBottomOf="parent"
            app:menu="@menu/bottom_nav_menu" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>