<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.candlelightapps.stocknroll_frontend.util.Converter" />

        <variable
            name="ingredient"
            type="com.candlelightapps.stocknroll_frontend.model.Ingredient" />
    </data>

    <com.google.android.material.card.MaterialCardView
        style="@style/CustomCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/ingredientImage"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="8dp"
            android:contentDescription="@string/ingredient_image"
            android:scaleType="fitCenter"
            android:src="@{ingredient.imageUrl}"
            tools:src="@drawable/ic_launcher_background" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="110dp"
            android:orientation="vertical"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/ingredient_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@{ingredient.name}"
                    android:textColor="@color/blue"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    tools:text="Ingredient name" />

                <ImageButton
                    android:id="@+id/btn_decrease_quantity"
                    style="@style/CustomDecreaseButton"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginEnd="8dp"
                    android:contentDescription="@string/decrease_quantity"
                    android:src="@drawable/ic_remove" />

                <TextView
                    android:id="@+id/ingredient_quantity"
                    android:layout_width="20sp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:gravity="center"
                    android:text="@={Converter.intToStringDisplay(ingredient.quantity)}"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:text="5" />

                <ImageButton
                    android:id="@+id/btn_increase_quantity"
                    style="@style/CustomIncreaseButton"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:contentDescription="@string/increase_quantity"
                    android:src="@drawable/add_icon" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/ingredient_expiry_date"
                    style="@style/BtnSubTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@{``+ingredient.expiryDate}"
                    tools:text="Expiry Date" />

                <ImageButton
                    android:id="@+id/btnDelete"
                    style="@style/CustomDeleteButton"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:contentDescription="@{@string/delete_ingredient(ingredient.name)}"
                    android:src="@drawable/delete_icon" />

            </LinearLayout>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>
